--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/mail.png" alt="" />
-                    <span>demo@gmail.com</span>
+                    <span>sonender@gmail.com</span>
                   </a>
                 </li>
                 <li class="">
@@ -356,7 +356,7 @@
                     </h6>
                   </div>
                   <h3>
-                    Boxer Joniya Daro
+                    Sonender Boxer Joniya Daro
                   </h3>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -384,7 +384,7 @@
                     </h6>
                   </div>
                   <h3>
-                    Boxer Joniya Daro
+                    Sonender Boxer Joniya Daro
                   </h3>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
